--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "chroma-js": "^2.1.0",
     "date-fns": "^2.16.1",
+    "material-ui-popup-state": "^1.7.1",
     "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-datetime": "^3.0.4",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "react-select": "^3.1.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
