--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^12.6.0",
     "chroma-js": "^2.1.0",
     "date-fns": "^2.16.1",
+    "jss-rtl": "^0.3.0",
     "material-ui-popup-state": "^1.7.1",
     "moment": "^2.29.1",
     "react": "^17.0.1",
@@ -19,6 +20,7 @@
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
     "react-select": "^3.1.1",
+    "react-share": "^4.3.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
