--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "material-ui-popup-state": "^1.7.1",
     "moment": "^2.29.1",
     "react": "^17.0.1",
+    "react-date-picker": "^8.0.6",
     "react-datetime": "^3.0.4",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
