--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "npm run build && node server.js",
+    "start": "react-scripts build && node server.js",
     "start-dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
