--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^2.10.6",
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/pickers": "^3.2.10",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
@@ -10,14 +14,25 @@
     "@types/node": "^12.19.15",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
+    "chroma-js": "^2.1.0",
+    "date-fns": "^2.16.1",
+    "express": "^4.17.1",
+    "jss-rtl": "^0.3.0",
+    "material-ui-popup-state": "^1.7.1",
+    "moment": "^2.29.1",
     "react": "^17.0.1",
+    "react-date-picker": "^8.0.6",
+    "react-datetime": "^3.0.4",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "react-select": "^3.1.1",
+    "react-share": "^4.3.1",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts build && node index.ts",
+    "start-dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
